// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`run test 'barrel files' with location '/Users/jaccoflenter/dev/fiberplane/fp…' 1`] = `
{
  "errorCount": 0,
  "results": [
    {
      "entries": [
        {
          "method": "get",
          "path": "user/1",
          "sources": [
            {
              "character": 18,
              "content": "cors()",
              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/index.ts",
              "line": 14,
              "modules": {
                "hono": [
                  {
                    "import": "cors",
                    "importPath": "hono/cors",
                    "name": "hono",
                    "version": "4.6.6",
                  },
                ],
              },
              "references": [],
            },
            {
              "character": 26,
              "content": "async (c) => {
  // await getUser();
  const user = await getUser();
  return c.json(user);
}",
              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/index.ts",
              "line": 14,
              "modules": {},
              "references": [
                {
                  "character": 9,
                  "content": "getUser",
                  "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/db/index.ts",
                  "line": 0,
                  "modules": {},
                  "references": [
                    {
                      "character": 23,
                      "content": "const getUser = measure("getUser", async () => {
  await sleep(100);
  const value: User = {
    name: DEFAULT_USER_NAME,
    email: DEFAULT_EMAIL,
  };
  return value;
})",
                      "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/db/getUser.ts",
                      "line": 7,
                      "modules": {
                        "@fiberplane/hono-otel": [
                          {
                            "import": "measure",
                            "importPath": "@fiberplane/hono-otel",
                            "name": "@fiberplane/hono-otel",
                            "version": "0.3.1",
                          },
                        ],
                      },
                      "references": [
                        {
                          "character": 0,
                          "content": "export async function sleep(duration: number) {
  return new Promise((resolve) => setTimeout(resolve, duration));
}",
                          "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/utils.ts",
                          "line": 0,
                          "modules": {},
                          "references": [],
                        },
                        {
                          "character": 0,
                          "content": "export type User = {
  name: string;
  email: Email;
};",
                          "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/types.ts",
                          "line": 2,
                          "modules": {},
                          "references": [
                            {
                              "character": 0,
                              "content": "export type Email = string;",
                              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/types.ts",
                              "line": 0,
                              "modules": {},
                              "references": [],
                            },
                          ],
                        },
                        {
                          "character": 6,
                          "content": "const DEFAULT_USER_NAME = "John Doe"",
                          "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/db/getUser.ts",
                          "line": 4,
                          "modules": {},
                          "references": [],
                        },
                        {
                          "character": 6,
                          "content": "const DEFAULT_EMAIL = "john@doe.com"",
                          "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/db/getUser.ts",
                          "line": 5,
                          "modules": {},
                          "references": [],
                        },
                        {
                          "character": 8,
                          "content": "const value: User = {
    name: DEFAULT_USER_NAME,
    email: DEFAULT_EMAIL,
  }",
                          "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/db/getUser.ts",
                          "line": 9,
                          "modules": {},
                          "references": [
                            {
                              "character": 0,
                              "content": "export type User = {
  name: string;
  email: Email;
};",
                              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/types.ts",
                              "line": 2,
                              "modules": {},
                              "references": [
                                {
                                  "character": 0,
                                  "content": "export type Email = string;",
                                  "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/types.ts",
                                  "line": 0,
                                  "modules": {},
                                  "references": [],
                                },
                              ],
                            },
                            {
                              "character": 6,
                              "content": "const DEFAULT_USER_NAME = "John Doe"",
                              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/db/getUser.ts",
                              "line": 4,
                              "modules": {},
                              "references": [],
                            },
                            {
                              "character": 6,
                              "content": "const DEFAULT_EMAIL = "john@doe.com"",
                              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/db/getUser.ts",
                              "line": 5,
                              "modules": {},
                              "references": [],
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                {
                  "character": 8,
                  "content": "const user = await getUser()",
                  "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/index.ts",
                  "line": 16,
                  "modules": {},
                  "references": [
                    {
                      "character": 9,
                      "content": "getUser",
                      "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/db/index.ts",
                      "line": 0,
                      "modules": {},
                      "references": [
                        {
                          "character": 23,
                          "content": "const getUser = measure("getUser", async () => {
  await sleep(100);
  const value: User = {
    name: DEFAULT_USER_NAME,
    email: DEFAULT_EMAIL,
  };
  return value;
})",
                          "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/db/getUser.ts",
                          "line": 7,
                          "modules": {
                            "@fiberplane/hono-otel": [
                              {
                                "import": "measure",
                                "importPath": "@fiberplane/hono-otel",
                                "name": "@fiberplane/hono-otel",
                                "version": "0.3.1",
                              },
                            ],
                          },
                          "references": [
                            {
                              "character": 0,
                              "content": "export async function sleep(duration: number) {
  return new Promise((resolve) => setTimeout(resolve, duration));
}",
                              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/utils.ts",
                              "line": 0,
                              "modules": {},
                              "references": [],
                            },
                            {
                              "character": 0,
                              "content": "export type User = {
  name: string;
  email: Email;
};",
                              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/types.ts",
                              "line": 2,
                              "modules": {},
                              "references": [
                                {
                                  "character": 0,
                                  "content": "export type Email = string;",
                                  "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/types.ts",
                                  "line": 0,
                                  "modules": {},
                                  "references": [],
                                },
                              ],
                            },
                            {
                              "character": 6,
                              "content": "const DEFAULT_USER_NAME = "John Doe"",
                              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/db/getUser.ts",
                              "line": 4,
                              "modules": {},
                              "references": [],
                            },
                            {
                              "character": 6,
                              "content": "const DEFAULT_EMAIL = "john@doe.com"",
                              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/db/getUser.ts",
                              "line": 5,
                              "modules": {},
                              "references": [],
                            },
                            {
                              "character": 8,
                              "content": "const value: User = {
    name: DEFAULT_USER_NAME,
    email: DEFAULT_EMAIL,
  }",
                              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/db/getUser.ts",
                              "line": 9,
                              "modules": {},
                              "references": [
                                {
                                  "character": 0,
                                  "content": "export type User = {
  name: string;
  email: Email;
};",
                                  "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/types.ts",
                                  "line": 2,
                                  "modules": {},
                                  "references": [
                                    {
                                      "character": 0,
                                      "content": "export type Email = string;",
                                      "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/types.ts",
                                      "line": 0,
                                      "modules": {},
                                      "references": [],
                                    },
                                  ],
                                },
                                {
                                  "character": 6,
                                  "content": "const DEFAULT_USER_NAME = "John Doe"",
                                  "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/db/getUser.ts",
                                  "line": 4,
                                  "modules": {},
                                  "references": [],
                                },
                                {
                                  "character": 6,
                                  "content": "const DEFAULT_EMAIL = "john@doe.com"",
                                  "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/db/getUser.ts",
                                  "line": 5,
                                  "modules": {},
                                  "references": [],
                                },
                              ],
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
      "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/barrel-files/index.ts",
      "name": "app",
    },
  ],
}
`;

exports[`run test 'module imports' with location '/Users/jaccoflenter/dev/fiberplane/fp…' 1`] = `
{
  "errorCount": 0,
  "results": [
    {
      "entries": [
        {
          "method": "get",
          "path": "/",
          "sources": [
            {
              "character": 2,
              "content": "() => cors()",
              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/module-imports/index.ts",
              "line": 9,
              "modules": {
                "hono": [
                  {
                    "import": "cors",
                    "importPath": "hono/cors",
                    "name": "hono",
                    "version": "4.6.6",
                  },
                ],
              },
              "references": [],
            },
            {
              "character": 2,
              "content": "(c) => c.text("Hello, Hono!")",
              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/module-imports/index.ts",
              "line": 10,
              "modules": {},
              "references": [],
            },
          ],
        },
        {
          "method": "get",
          "path": "/slow",
          "sources": [
            {
              "character": 17,
              "content": "cors()",
              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/module-imports/index.ts",
              "line": 19,
              "modules": {
                "hono": [
                  {
                    "import": "cors",
                    "importPath": "hono/cors",
                    "name": "hono",
                    "version": "4.6.6",
                  },
                ],
              },
              "references": [],
            },
            {
              "character": 25,
              "content": "async (c) => {
  await sleep(1000);
  return c.text("Hello, Hono (slow)!");
}",
              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/module-imports/index.ts",
              "line": 19,
              "modules": {},
              "references": [
                {
                  "character": 0,
                  "content": "export async function sleep(duration: number) {
  return new Promise((resolve) => setTimeout(resolve, duration));
}",
                  "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/module-imports/index.ts",
                  "line": 14,
                  "modules": {},
                  "references": [],
                },
              ],
            },
          ],
        },
        {
          "method": "get",
          "path": "user/1",
          "sources": [
            {
              "character": 18,
              "content": "cors()",
              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/module-imports/index.ts",
              "line": 32,
              "modules": {
                "hono": [
                  {
                    "import": "cors",
                    "importPath": "hono/cors",
                    "name": "hono",
                    "version": "4.6.6",
                  },
                ],
              },
              "references": [],
            },
            {
              "character": 26,
              "content": "async (c) => {
  // await getUser();
  const user = await getUser();
  return c.json(user);
}",
              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/module-imports/index.ts",
              "line": 32,
              "modules": {},
              "references": [
                {
                  "character": 23,
                  "content": "const getUser = measure("getUser", async () => {
  await new Promise((resolve) => setTimeout(resolve, 100));
  const value: User = {
    name: "John Doe",
    email: "john@doe.com",
  };
  return value;
})",
                  "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/module-imports/db.ts",
                  "line": 4,
                  "modules": {
                    "@fiberplane/hono-otel": [
                      {
                        "import": "measure",
                        "importPath": "@fiberplane/hono-otel",
                        "name": "@fiberplane/hono-otel",
                        "version": "0.3.1",
                      },
                    ],
                  },
                  "references": [
                    {
                      "character": 0,
                      "content": "export type User = {
  name: string;
  email: Email;
};",
                      "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/module-imports/types.ts",
                      "line": 2,
                      "modules": {},
                      "references": [
                        {
                          "character": 0,
                          "content": "export type Email = string;",
                          "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/module-imports/types.ts",
                          "line": 0,
                          "modules": {},
                          "references": [],
                        },
                      ],
                    },
                    {
                      "character": 8,
                      "content": "const value: User = {
    name: "John Doe",
    email: "john@doe.com",
  }",
                      "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/module-imports/db.ts",
                      "line": 6,
                      "modules": {},
                      "references": [
                        {
                          "character": 0,
                          "content": "export type User = {
  name: string;
  email: Email;
};",
                          "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/module-imports/types.ts",
                          "line": 2,
                          "modules": {},
                          "references": [
                            {
                              "character": 0,
                              "content": "export type Email = string;",
                              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/module-imports/types.ts",
                              "line": 0,
                              "modules": {},
                              "references": [],
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                {
                  "character": 8,
                  "content": "const user = await getUser()",
                  "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/module-imports/index.ts",
                  "line": 34,
                  "modules": {},
                  "references": [
                    {
                      "character": 23,
                      "content": "const getUser = measure("getUser", async () => {
  await new Promise((resolve) => setTimeout(resolve, 100));
  const value: User = {
    name: "John Doe",
    email: "john@doe.com",
  };
  return value;
})",
                      "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/module-imports/db.ts",
                      "line": 4,
                      "modules": {
                        "@fiberplane/hono-otel": [
                          {
                            "import": "measure",
                            "importPath": "@fiberplane/hono-otel",
                            "name": "@fiberplane/hono-otel",
                            "version": "0.3.1",
                          },
                        ],
                      },
                      "references": [
                        {
                          "character": 0,
                          "content": "export type User = {
  name: string;
  email: Email;
};",
                          "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/module-imports/types.ts",
                          "line": 2,
                          "modules": {},
                          "references": [
                            {
                              "character": 0,
                              "content": "export type Email = string;",
                              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/module-imports/types.ts",
                              "line": 0,
                              "modules": {},
                              "references": [],
                            },
                          ],
                        },
                        {
                          "character": 8,
                          "content": "const value: User = {
    name: "John Doe",
    email: "john@doe.com",
  }",
                          "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/module-imports/db.ts",
                          "line": 6,
                          "modules": {},
                          "references": [
                            {
                              "character": 0,
                              "content": "export type User = {
  name: string;
  email: Email;
};",
                              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/module-imports/types.ts",
                              "line": 2,
                              "modules": {},
                              "references": [
                                {
                                  "character": 0,
                                  "content": "export type Email = string;",
                                  "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/module-imports/types.ts",
                                  "line": 0,
                                  "modules": {},
                                  "references": [],
                                },
                              ],
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
      "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/module-imports/index.ts",
      "name": "app",
    },
  ],
}
`;

exports[`run test 'multiple files' with location '/Users/jaccoflenter/dev/fiberplane/fp…' 1`] = `
{
  "errorCount": 0,
  "results": [
    {
      "entries": [
        {
          "method": "get",
          "path": "/",
          "sources": [
            {
              "character": 13,
              "content": "(c) => c.text("Hello, Hono!")",
              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/multiple/index.ts",
              "line": 4,
              "modules": {},
              "references": [],
            },
          ],
        },
      ],
      "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/multiple/index.ts",
      "name": "app",
    },
    {
      "entries": [
        {
          "method": "get",
          "path": "/",
          "sources": [
            {
              "character": 13,
              "content": "(c) => {
  return c.json({});
}",
              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/multiple/other.ts",
              "line": 2,
              "modules": {},
              "references": [],
            },
          ],
        },
        {
          "method": "post",
          "path": "/",
          "sources": [
            {
              "character": 14,
              "content": "(c) => c.json({ hello: "world" })",
              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/multiple/other.ts",
              "line": 5,
              "modules": {},
              "references": [],
            },
          ],
        },
      ],
      "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/multiple/other.ts",
      "name": "app",
    },
  ],
}
`;

exports[`run test 'single file' with location '/Users/jaccoflenter/dev/fiberplane/fp…' 1`] = `
{
  "errorCount": 0,
  "results": [
    {
      "entries": [
        {
          "method": "get",
          "path": "/",
          "sources": [
            {
              "character": 13,
              "content": "(c) => c.text("Hello, Hono!")",
              "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/single/index.ts",
              "line": 4,
              "modules": {},
              "references": [],
            },
          ],
        },
      ],
      "fileName": "/Users/jaccoflenter/dev/fiberplane/fpx/lsp-analysis/test/test-case/single/index.ts",
      "name": "app",
    },
  ],
}
`;
